# tic-tac-toe

./: .gitignore  README.md  pyproject.toml  run.sh  setup.cfg
tic_tac_toe/: __main__.py  board.py  game.py  main.py  player.py
